--- a/root-src/scss/_verbs.scss
+++ b/root-src/scss/_verbs.scss
@@ -2,7 +2,6 @@
     &List {
         width: 100vw;
         position: relative;
-        overflow: scroll;
         border-top: 1px solid #eee;
     }
     &Header {
